# cursor-agent-sdk

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
cursor_agent_sdk/: __init__.py  chat_input.py  chat_log.py  cli.py  codegraph.py  completion.py  config.py  errors.py  history.py  lean.py  model.py  output.py  session.py  tool.py  tool_display.py
examples/: Makefile  config.toml.example  github-action.yml
tests/: conftest.py  test_chat_input.py  test_chat_log.py  test_cli.py  test_codegraph.py  test_completion.py  test_config.py  test_errors.py  test_history.py  test_lean.py  test_model.py  test_output.py  test_session.py  test_tool_display.py
