[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cursor-agent-sdk"
version = "0.2.3"
description = "CLI and library for multi-turn Cursor SDK agent sessions in any project"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "cursor-sdk>=0.1.5",
    'tomli>=2.0.0; python_version < "3.11"',
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[project.scripts]
cursor-agent-sdk = "cursor_agent_sdk.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cursor_agent_sdk"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: hits the live Cursor SDK bridge (requires CURSOR_API_KEY)",
]
